[gd_scene load_steps=12 format=3 uid="uid://c1c3em12xqxkw"]

[ext_resource type="Script" uid="uid://depnvp7r0ev43" path="res://scenes/game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://5swlliuwds82" path="res://assets/button/settings_6916582.png" id="2_u5sy4"]
[ext_resource type="Texture2D" uid="uid://b87uuqdkfggb4" path="res://assets/levels/star.png" id="3_gee14"]
[ext_resource type="Texture2D" uid="uid://bgk65w8g6pqsx" path="res://assets/button/arrow_basic_e.png" id="3_iywne"]
[ext_resource type="Texture2D" uid="uid://d0qjbpr8pjpb" path="res://assets/levels/star_outline.png" id="4_0tnpc"]
[ext_resource type="Texture2D" uid="uid://b322rx7c3myxu" path="res://assets/button/arrow_basic_e_small.png" id="4_p57ef"]
[ext_resource type="Texture2D" uid="uid://16fwcjjt2oio" path="res://assets/button/rotate_ccw.png" id="5_u5sy4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig7tw"]
size = Vector2(598, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wfyh"]
size = Vector2(2400, 472)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbhrr"]
bg_color = Color(0.0980392, 0.0941176, 0.160784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iywne"]
bg_color = Color(0.780392, 0.501961, 0.180392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_lbhrr")

[node name="Game" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BG" type="Panel" parent="Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Tip" type="Label" parent="Game"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.5
offset_top = 113.0
offset_right = 150.5
offset_bottom = 174.0
grow_horizontal = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 24
text = "Reach 80m to win!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropFrom" type="Control" parent="Game"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -352.0
offset_right = 2.0
offset_bottom = -352.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Platform" type="ColorRect" parent="Game"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -301.0
offset_top = -147.0
offset_right = 299.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(250, 15)
mouse_filter = 1
color = Color(1, 0.933333, 0.8, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="Game/Platform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Platform/StaticBody2D"]
position = Vector2(299, 15)
shape = SubResource("RectangleShape2D_ig7tw")

[node name="DiscardArea" type="Control" parent="Game"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="DropArea" type="Area2D" parent="Game/DiscardArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/DiscardArea/DropArea"]
position = Vector2(0, 164)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="TopBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
color = Color(0.172549, 0.164706, 0.235294, 1)

[node name="Label" type="Label" parent="TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 21.0
offset_top = -41.0
offset_right = 108.0
offset_bottom = -3.0
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "level 2"

[node name="ProgressBar" type="ProgressBar" parent="TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 21.0
offset_top = 5.0
offset_right = 323.0
offset_bottom = 34.0
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_lbhrr")
theme_override_styles/fill = SubResource("StyleBoxFlat_iywne")
show_percentage = false

[node name="Star" type="TextureButton" parent="TopBar/ProgressBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_left = 82.0
offset_top = -13.0
offset_right = 162.0
offset_bottom = 67.0
scale = Vector2(0.583356, 0.583356)
disabled = true
texture_normal = ExtResource("3_gee14")
texture_disabled = ExtResource("4_0tnpc")
ignore_texture_size = true
stretch_mode = 5

[node name="Star2" type="TextureButton" parent="TopBar/ProgressBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_left = 262.0
offset_top = -13.0
offset_right = 342.0
offset_bottom = 67.0
scale = Vector2(0.583356, 0.583356)
disabled = true
texture_normal = ExtResource("3_gee14")
texture_disabled = ExtResource("4_0tnpc")
ignore_texture_size = true
stretch_mode = 5

[node name="Star3" type="TextureButton" parent="TopBar/ProgressBar"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_left = 166.0
offset_top = -13.0
offset_right = 246.0
offset_bottom = 67.0
scale = Vector2(0.583356, 0.583356)
disabled = true
texture_normal = ExtResource("3_gee14")
texture_disabled = ExtResource("4_0tnpc")
ignore_texture_size = true
stretch_mode = 5

[node name="Settings" type="TextureButton" parent="TopBar"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -30.0
offset_right = -24.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_u5sy4")
texture_pressed = ExtResource("2_u5sy4")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="UI" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.172549, 0.164706, 0.235294, 1)

[node name="Container" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Spacer" type="Control" parent="UI/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Left" type="TextureButton" parent="UI/Container"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_iywne")
texture_pressed = ExtResource("4_p57ef")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="Right" type="TextureButton" parent="UI/Container"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_iywne")
texture_pressed = ExtResource("4_p57ef")
ignore_texture_size = true
stretch_mode = 5

[node name="Drop" type="Button" parent="UI/Container"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 60
text = "DROP"

[node name="Rotate" type="TextureButton" parent="UI/Container"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_u5sy4")
texture_pressed = ExtResource("5_u5sy4")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="Spacer2" type="Control" parent="UI/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Line" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -149.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Line"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -2.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "0m"

[node name="Line" type="Line2D" parent="Line"]
position = Vector2(-1, 0)
points = PackedVector2Array(749, 0, -25, 0)
width = 5.0
default_color = Color(0.519162, 0.519162, 0.519162, 1)
texture_mode = 1
